# coconut

./: .gitignore  README.md  go.mod
.github/workflows/: wasm_build.yaml
CoconutGo/: go.mod  go.sum  lib.go  rust_compatibility_test.go  setup.go
CoconutGo/elgamal/: elgamal.go  elgamal_test.go  marshal.go
CoconutGo/polynomial/: polynomial.go  polynomial_test.go
CoconutGo/proofs/: proofs.go  proofs_test.go
CoconutGo/scheme/: aggregation.go  aggregation_test.go  keygen.go  mod.go  proofs.go  proofs_test.go  scheme.go  setup.go  signature.go  signature_test.go
CoconutGo/utils/: helpers.go  helpers_test.go
cli-demo-rs/: Cargo.toml
cli-demo-rs/src/: main.rs
coconut-rs/: Cargo.toml  README.md
coconut-rs/LICENSES/: MIT.txt
coconut-rs/benches/: benchmarks.rs
coconut-rs/src/: elgamal.rs  error.rs  lib.rs  serde.rs  traits.rs  utils.rs
coconut-rs/src/impls/: clone.rs  serde.rs
coconut-rs/src/proofs/: mod.rs
coconut-rs/src/scheme/: aggregation.rs  issuance.rs  keygen.rs  mod.rs  setup.rs  signature.rs  verification.rs
coconut-rs/src/tests/: e2e.rs  mod.rs
coconutGo/: coconutGo.go  go.mod  go.sum  rust_compatibility_test.go  setup.go
coconutGo/elgamal/: elgamal.go  elgamal_test.go  marshal.go  marshal_test.go  serialization_test.go
coconutGo/internal/: main.go  run_test.py
coconutGo/internal/cmd/: README.md  aggregate_keys.go  aggregate_sigs.go  blind_sign.go  init_user.go  make_authorities.go  prepare_blind_sign.go  prove_credential.go  randomize.go  root.go  unblind.go  verify_credential.go
coconutGo/internal/utils/: hashAttribute.go
coconutGo/polynomial/: polynomial.go  polynomial_test.go
coconutGo/scheme/: aggregation.go  aggregation_test.go  issuance.go  issuance_test.go  keygen.go  marshal.go  proofs.go  proofs_test.go  scheme.go  scheme_test.go  serialization_test.go  verification.go  verification_test.go
coconutGo/utils/: arithmetic_helpers.go  helpers.go  helpers_test.go
keygen-cli/: Cargo.toml  README.md
keygen-cli/src/: cli.yaml  main.rs
wasm-demo/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
wasm-demo/coconut-wasm-wrapper/: Cargo.toml
wasm-demo/coconut-wasm-wrapper/src/: lib.rs
