[package]
name = "coconut-rs"
version = "0.3.0"
authors = ["Jędrzej Stuczyński <andrew@nymtech.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = "0.5"
itertools = "0.10"
digest = "0.9"
rand = "0.8"
getrandom = "*"
thiserror = "1.0"
#[dependencies.zeroize]
#version = "1.2.0"
#features = ["zeroize_derive"]

sha2 = "0.9"
sha3 = "0.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false

[dependencies.ff]
version = "0.10"
default-features = false

[dependencies.group]
version = "0.10"
default-features = false

[dev-dependencies]
criterion = "0.3"
doc-comment = "0.3"

[dev-dependencies.bincode]
version = "1"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []

[target.'cfg(target_env = "wasm32-unknown-unknown")'.dependencies]
getrandom = { version="*", features=["js"] }
