[package]
name = "coconut-rs"
version = "0.4.0"
authors = ["Jędrzej Stuczyński <andrew@nymtech.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = {version = "0.5", default-features = false, features = ["pairings", "alloc"]}
itertools = "0.10"
digest = "0.9"
rand = "0.8"
thiserror = "1.0"
subtle = "2.4"
#[dependencies.zeroize]
#version = "1.2.0"
#features = ["zeroize_derive"]
serde = "1.0"
serde_derive = "1.0"
bs58 = "0.4.0"
sha2 = "0.9"
sha3 = "0.9"

[dependencies.ff]
version = "0.10"
default-features = false

[dependencies.group]
version = "0.10"
default-features = false

[dev-dependencies]
criterion = { version="0.3", features=["html_reports"] }
doc-comment = "0.3"

[dev-dependencies.bincode]
version = "1"

[[bench]]
name = "benchmarks"
harness = false

[target."cfg(target_arch = \"wasm32\")".dependencies.getrandom]
version = "0.2"
optional = true

[features]
# It seems that in some cases when buidling on x86, cargo can infer a false-positive cyclic dependency on `ahash` inside `js-sys`,
# even if this crate is only imported in wasm32. As a current workaround, explicit `wasm` feature is introduced.
wasm = ["getrandom/js"]
