[package]
name = "keygen-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coconut-rs = { path="../coconut-rs" }
clap = {version = "2", features = ["yaml"]}
pretty_env_logger = "0.4.0"
log = "0.4.14"
uuid = {version="0.8.2", features = ["v4"]}
hex = "0.4.3"