[package]
name = "coconut-wasm-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bs58 = "0.4.0"
coconut-rs = { path = "../../coconut-rs" }
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
rand = "0.8.5"

console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

getrandom = { version = "0.2", features = ["js"]}
